Update bb-scripts for zeus

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PATTERN_azure-device-update := "^${LAYERDIR}/"
 # This is applicable where we are using appends files to adjust other recipes.
 BBFILE_PRIORITY_azure-device-update = "16"
 LAYERDEPENDS_azure-device-update = "swupdate"
-LAYERSERIES_COMPAT_azure-device-update  = "warrior"
+LAYERSERIES_COMPAT_azure-device-update  = "zeus"
 
 # Layer-specific configuration variables.
 # These values can/will be overriden by environment variables
