--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -54,3 +54,9 @@ EXTRA_USERS_PARAMS = "groupadd --gid 800 adu ; \
  useradd --uid 800 -p '' -r -g adu --no-create-home --shell /bin/false adu ; \
  useradd --uid 801 -p '' -r -g do -G adu --no-create-home --shell /bin/false do ; \
  "
+
+# Publish the variables to wic plugins we use for our plugin adufs
+WICVARS_append += " \
+    MANUFACTURER \
+    MODEL \
+    "
