Added script to azure-device-update to generate the manifest.json file

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,11 +17,20 @@ LAYERSERIES_COMPAT_azure-device-update  = "warrior"
 # These values can/will be overriden by environment variables
 # if those variables are added to the BB_ENV_EXTRAWHITE environment variable.
 
+# ADU_SOFTWARE_NAME should be used for the name of the software provider. It is
+# used in the manifest.json file which you will upload to the Azure Portal.
+ADU_SOFTWARE_PROVIDER ?= "Contoso"
+# ADU_SOFTWARE_NAME should be used for the name of the updated software. It is
+# used in the manifest.json file which you will upload to the Azure Portal.
+ADU_SOFTWARE_NAME ?= "ADU Raspberry Pi Example"
 # ADU_SOFTWARE_VERSION will be written to a file that is read by the ADU Client.
 # This value will be reported through the Device Information PnP interface by the ADU Client
 # and is the version of the installed content/image/firmware.
 # For the ADU reference image this is set to a new value every build.
 ADU_SOFTWARE_VERSION ?= "0.0.0.1"
+# ADU_INSTALLED_CRITERIA will be used by the Azure Portal to determine if the
+# current version can be installed on the device. Should be lower than your current version.
+ADU_INSTALLED_CRITERIA ?= "0.0.0.1"
 
 # HW_REV will be written to a file that is used by swupdate
 # to determine hardware compatibility.
