Fix apply cpprest patch

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,7 +2,9 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory containing .bb and .bbappend files, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb \
-            ${LAYERDIR}/recipes*/*/*.bbappend"
+            ${LAYERDIR}/recipes*/*/*.bbappend \
+            ${LAYERDIR}/meta*/recipes*/*/*.bb \
+            ${LAYERDIR}/meta*/recipes*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "azure-device-update"
 BBFILE_PATTERN_azure-device-update := "^${LAYERDIR}/"
