Updated files to release 0.8.0

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -51,6 +51,6 @@ INHERIT += "extrausers"
 # groupadd, userdel, groupdel, usermod and groupmod.
 EXTRA_USERS_PARAMS = "groupadd --gid 800 adu ; \
  groupadd -r --gid 801 do ; \
- useradd --uid 800 -p '' -r -g adu --no-create-home --shell /bin/false adu ; \
+ useradd --uid 800 -p '' -r -g adu -G do --no-create-home --shell /bin/false adu ; \
  useradd --uid 801 -p '' -r -g do -G adu --no-create-home --shell /bin/false do ; \
  "
