--- a/recipes-azure-device-update/adu-agent-service/files/adu-agent.service
+++ b/recipes-azure-device-update/adu-agent-service/files/adu-agent.service
@@ -1,16 +1,17 @@
 [Unit]
-Description=ADU Client service.
-After=network-online.target
-Wants=deliveryoptimization-agent.service
+Description=Device Update Agent daemon.
+After=network-online.target deliveryoptimization-agent.service
+Wants=network-online.target deliveryoptimization-agent.service
 
 [Service]
 Type=simple
-Restart=on-failure
-RestartSec=1
+Restart=always
+RestartSec=5
 User=adu
-# If /adu/adu-conf.txt does not exist, systemd will try to start the ADU executable
-# 5 times and then give up.
+Group=adu
+# systemd will try to start the ADU executable 5 times and then give up.
 # We can check logs with journalctl -f -u adu-agent.service
+# Set log verbosity level to 'Debug' and enable IoT Hub tracing.
 ExecStart=/usr/bin/AducIotAgent -l 0 -e
 
 [Install]
